to add the all assets
added the all images is done

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="#home" class="logo">Rashid <span>Raza</span></a>
+            <a href="#about" class="logo">Rashid <span>Raza</span></a>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About Us</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -29,7 +28,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero" id="home">
+    <section class="hero" id="about">
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Hi, I'm Rashid Raza</h1>
@@ -45,8 +44,8 @@
             <div class="hero-image">
                 <div class="profile-card">
                     <div class="profile-image">
-    <img src="rahid-raza-upwork-profile.png" alt="Rashid Raza Profile" />
-</div>
+                        <img src="rahid-raza-upwork-profile.png" alt="Rashid Raza Profile" />
+                    </div>
                     <h3>Rashid Raza</h3>
                     <p>Front-End Developer</p>
                     <p>React • TypeScript • Tailwind CSS</p>
@@ -107,7 +106,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/we_want_design_mockup.png" alt="we_want_design_mockup" />
+                      <img src="we_want_design_mockup.png" alt="we_want_design_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>We Want Design</h3>
@@ -125,7 +124,7 @@
                 </div>
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/bonjan_job_mockup.png" alt="bonjan_job_mockup" />
+                      <img src="bonjan_job_mockup.png" alt="bonjan_job_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>BonjanJob Resume Builder</h3>
@@ -143,7 +142,7 @@
                 </div>
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/quran_teacher_mockup.png" alt="we_want_design_mockup" />
+                      <img src="quran_teacher_mockup.png" alt="we_want_design_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>Quran Teacher Live</h3>
@@ -161,7 +160,7 @@
                 </div>
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/curricuolsi_mockup.png" alt="curricuolsi_mockup" />
+                      <img src="curricuolsi_mockup.png" alt="curricuolsi_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>Curriculosi Resume Builder</h3>
@@ -180,7 +179,7 @@
                 </div>
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/hamdard_khutab_mockup.png" alt="hamdard_khutab_mockup" />
+                      <img src="hamdard_khutab_mockup.png" alt="hamdard_khutab_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>Hamdard Kutab khana</h3>
@@ -198,7 +197,7 @@
                 </div>
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/investigator_mockup.png" alt="investigator_mockup" />
+                      <img src="investigator_mockup.png" alt="investigator_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>Investigator Jobs Portal</h3>
@@ -217,7 +216,7 @@
                 </div>
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/aoc_mockup.png" alt="aoc_mockup" />
+                      <img src="aoc_mockup.png" alt="aoc_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>Attock Oil Company Limited</h3>
@@ -235,7 +234,7 @@
                 </div>
                 <div class="portfolio-item scroll-animate">
                     <div class="portfolio-image">
-                      <img src="assets/images/grip_n_feel_mockup.png" alt="grip_n_feel_mockup" />
+                      <img src="grip_n_feel_mockup.png" alt="grip_n_feel_mockup" />
                     </div>
                     <div class="portfolio-content">
                         <h3>Grip n Feel – Golf Training</h3>
